Fix minor bugs.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class="container">
-        <h1>College Event Calendar</h1>
+        <h1>Campus Event Calendar</h1>
         <div class="login-form">
             <h2>Login</h2>
             <form id="loginForm">
