--- a/student.html
+++ b/student.html
@@ -29,7 +29,7 @@
                 <option value="social">Social</option>
                 <option value="sports">Sports</option>
                 <option value="cultural">Cultural</option>
-                <option value="other">Other</option>
+                <option value="technical">Technical</option>
             </select>
 
             <div class="month-navigation">
