--- a/faculty.html
+++ b/faculty.html
@@ -51,7 +51,7 @@
                         <option value="social">Social</option>
                         <option value="sports">Sports</option>
                         <option value="cultural">Cultural</option>
-                        <option value="other">Other</option>
+                        <option value="technical">Technical</option>
                     </select>
                 </div>
                 <div class="form-group">
@@ -81,7 +81,7 @@
                     <option value="social">Social</option>
                     <option value="sports">Sports</option>
                     <option value="cultural">Cultural</option>
-                    <option value="other">Other</option>
+                    <option value="technical">Technical</option>
                 </select>
             </div>
             <table id="eventsTable">
